Fixed not showing view button

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,7 +46,7 @@ main {
 }
 
 .card {
-  height: 25rem;
+  height: 25.5rem;
   background-color: var(--clr-dark-400);
   border-bottom: solid 8px var(--clr-primary-100);
   border-radius: 10px;
@@ -56,12 +56,10 @@ main {
   &-content {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 1rem;
+    padding: 0 1rem;
   }
 
   &-title {
-    min-height: 6vh;
     text-transform: uppercase;
     letter-spacing: 1px;
   }
@@ -71,7 +69,7 @@ main {
     color: #fff;
     text-align: center;
     text-transform: uppercase;
-    margin: 1rem;
+    margin: 0 1rem;
     padding: 0.5rem 0;
     border-radius: 2rem;
     border: 4px solid var(--clr-primary-100);
